# enzyme

./: .gitignore  README.md  pixi.toml  pyproject.toml
config/: config.yaml  parameters-123456789.yaml
enzyme/: __init__.py  enzyme.py
mcp/: mcp_contracts.py  mcp_errors.py  mcp_simulation.py  mcp_tools.py  server.py
scripts/: example.json  experiment.py  generate_parameters.py  measurements.json
tests/: conftest.py  test_kinetics.py
tests/mcp/: conftest.py  test_contracts.py  test_server.py  test_simulation.py  test_tools.py
