# pyproject.toml

[build-system]
requires      = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'enzyme'
version = '1.0.0'
description = 'Ground-truth model for AI scientist experiments'
readme = {file = 'README.md', content-type = 'text/markdown'}
authors = [{ name = 'Maxim Borisyak', email = 'maxim.borisyak@gmail.com' }]
license = { file = 'LICENSE' }
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
]
keywords = ['Chemical Kinetics', 'jax']
dependencies = [
  'numpy>=2.0.0',
  'scipy>=1.0.0',
  'jax>=0.9.0',
  'pyyaml>=6.0.0'
]
requires-python = '>=3.9'

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = 'none'

[tool.setuptools.packages.find]
exclude = ['contrib', 'examples', 'docs', 'tests']
